[project]
name = "statemachines_orchestrator"
version = "0.1.0"

description = "An extension of `python-statemachine` with linking between machines."
requires-python = ">=3.10"

dependencies = [
    "python-statemachine == 2.5.0",
]

[dependency-groups]
dev = [
    "ruff",
    "pre-commit",
    "mypy",
    "pytest",
    "pytest-cov",
]

[tool.mypy]
