[project]
name = "statemachines_orchestrator"
version = "0.0.3"

description = "An extension of `python-statemachine` with linking between machines."
requires-python = ">=3.11"

dependencies = [
    "python-statemachine == 2.5.0",
]

[dependency-groups]
dev = [
    "pre-commit == 4.2.0",
    "mypy == 1.16.0",
    "pytest == 8.3.5",
    "pytest-cov == 6.1.1",
]
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "SLF001",
    "D211",
    "D213",
    "COM812",
    "D203",
    "ISC001"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
    "D",
    "S101"
]
"__init__.py" = [
    "D104"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
